[project]
name = "src"
version = "0.1.0"
description = "A FastAPI application to interact with PRT DB."
authors = [
    {name = "Kieran Pritchard",email = "kieran.pritchard@ons.gov.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "boto3 (>=1.40.17,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"
mkdocstrings-python = "^1.16.12"

